--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,18 @@
 [submodule ".config/nvim"]
-	path = .config/nvim
-	url = https://github.com/rmenai/nvim.git
+  path = .config/nvim
+  url = https://github.com/rmenai/nvim
+[submodule ".config/zsh/.oh-my-zsh"]
+  path = .config/zsh/.oh-my-zsh
+  url = https://github.com/ohmyzsh/ohmyzsh
+[submodule ".config/zsh/custom/plugins/autoswitch_virtualenv"]
+  path = .config/zsh/custom/plugins/autoswitch_virtualenv
+  url = https://github.com/MichaelAquilina/zsh-autoswitch-virtualenv
+[submodule ".config/zsh/custom/plugins/zsh-autosuggestions"]
+  path = .config/zsh/custom/plugins/zsh-autosuggestions
+  url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule ".config/zsh/custom/plugins/zsh-syntax-highlighting"]
+  path = .config/zsh/custom/plugins/zsh-syntax-highlighting
+  url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule ".config/zsh/custom/plugins/zsh-vi-mode"]
+  path = .config/zsh/custom/plugins/zsh-vi-mode
+  url = https://github.com/jeffreytse/zsh-vi-mode
