--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule ".config/nvim"]
   path = .config/nvim
   url = https://github.com/rmenai/nvim
+[submodule ".config/zsh/custom/plugins/zsh-autosuggestions"]
+	path = .config/zsh/custom/plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule ".config/zsh/custom/plugins/zsh-syntax-highlighting"]
+	path = .config/zsh/custom/plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule ".config/zsh/custom/plugins/zsh-vi-mode"]
+	path = .config/zsh/custom/plugins/zsh-vi-mode
+	url = https://github.com/jeffreytse/zsh-vi-mode.git
+[submodule ".config/zsh/ohmyzsh"]
+	path = .config/zsh/ohmyzsh
+	url = https://github.com/ohmyzsh/ohmyzsh.git
