--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,1 +1,13 @@
+# Options to make tmux more pleasant
+set -g mouse off
+set -g default-terminal "tmux-256color"
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+# Make the status line pretty and add some modules
 set-option -g status off
