Add vi mode to zsh

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,6 +2,9 @@
 set -g mouse off
 set -g default-terminal "tmux-256color"
 
+# Make cursors more stable in tmux
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
