Add tmux config and other

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,16 +1,35 @@
 # Options to make tmux more pleasant
-set -g mouse off
 set -g default-terminal "tmux-256color"
+set -g mouse off
 
-# Make cursors more stable in tmux
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+# Set prefix
+unbind C-b
+set -g prefix C-Space
+bind-key C-Space send-prefix
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+ 
+# Install plugins
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "aserowy/tmux.nvim"
+set -g @plugin "dreamsofcode-io/catppuccin-tmux"
+set -g @plugin "tmux-plugins/tmux-yank"
 
-# Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# Configure plugins
+set -g @tmux-nvim-resize-step-x 2
+set -g @tmux-nvim-resize-step-y 2
 
-# Make the status line pretty and add some modules
-set-option -g status off
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Auto install tpm plugins
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux"
+
+if "test ! -d ~/.local/share/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.local/share/tmux/plugins/tpm && ~/.local/share/tmux/plugins/tpm/bin/install_plugins'"
+
+run "~/.local/share/tmux/plugins/tpm/tpm"
