--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,30 +1,63 @@
 # Options to make tmux more pleasant
 set -g default-terminal "tmux-256color"
+set -g detach-on-destroy off
 set -g mouse off
+
+# Fix yazi image preview
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
 
 # Set prefix
 unbind C-b
 set -g prefix C-Space
 bind-key C-Space send-prefix
 
-# Start windows and panes at 1, not 0
-set -g base-index 1
-setw -g pane-base-index 1
+# Rebind splits
+unbind s
+bind a choose-session
+bind s split-window -v
+bind v split-window -h
  
 # Install plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "tmux-plugins/tmux-resurrect"
+set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "aserowy/tmux.nvim"
-set -g @plugin "dreamsofcode-io/catppuccin-tmux"
+set -g @plugin "tmux-plugins/tmux-open"
 set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "dreamsofcode-io/catppuccin-tmux"
 
 # Configure plugins
 set -g @tmux-nvim-resize-step-x 2
 set -g @tmux-nvim-resize-step-y 2
 
+set -g @resurrect-capture-pane-contents "on"
+set -g @continumm-restore "on"
+
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+# Configure sesh
+bind-key "o" run-shell "sesh connect \"$(
+ sesh list | fzf-tmux -p 55%,60% \
+  --no-sort --ansi --border-label ' sesh ' --prompt '  ' \
+  --bind 'tab:down,btab:up' \
+  --bind 'ctrl-a:change-prompt(⚡)+reload(sesh list)' \
+  --bind 'ctrl-t:change-prompt(🪟)+reload(sesh list -t)' \
+  --bind 'ctrl-g:change-prompt(⚙️)+reload(sesh list -c)' \
+  --bind 'ctrl-x:change-prompt(📁)+reload(sesh list -z)' \
+  --bind 'ctrl-f:change-prompt(🔎)+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+  --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡)+reload(sesh list)'
+)\""
+
+bind-key x kill-pane
 
 # Auto install tpm plugins
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.local/share/tmux"
