Make everything better

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -20,8 +20,8 @@ bind-key C-Space send-prefix
 # Rebind splits
 unbind s
 bind a choose-session
-bind s split-window -v
-bind v split-window -h
+bind s split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
  
 # Install plugins
 set -g @plugin "tmux-plugins/tpm"
