--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -1,17 +1,22 @@
 [[session]]
-name = "Sesh config"
+name = "Sesh Config"
 path = "~/.config/sesh"
 startup_command = "nvim sesh.toml"
 
 [[session]]
-name = "Tmux config"
+name = "Tmux Config"
 path = "~/.config/tmux"
 startup_command = "nvim tmux.conf"
 
 [[session]]
-name = "Neovim config"
+name = "Neovim Config"
 path = "~/.config/nvim/lua"
 startup_command = "nvim core/mappings.lua"
+
+[[session]]
+name = "Zsh Config"
+path = "~"
+startup_command = "nvim .zshrc"
 
 [[session]]
 name = "Notes"
@@ -19,12 +24,17 @@ path = "~/Documents/notes"
 startup_command = "nvim Learning/core-principles-of-mastery.md"
 
 [[session]]
-name = "C school"
+name = "Quick Note"
+path = "~/Documents/notes"
+startup_command = "nvim Random/test.md --cmd 'autocmd VimEnter * ObsidianCreate'"
+
+[[session]]
+name = "C School"
 path = "~/Documents/school/c/src"
 startup_command = "nvim test.c"
 
 [[session]]
-name = "Ocaml school"
+name = "Ocaml School"
 path = "~/Documents/school/ocaml/bin"
 startup_command = "nvim main.ml"
 
