--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -34,28 +34,30 @@ set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "dreamsofcode-io/catppuccin-tmux"
 
 # Configure plugins
+set -g @tmux-nvim-navigation-cycle false
 set -g @tmux-nvim-resize-step-x 2
 set -g @tmux-nvim-resize-step-y 2
 
 set -g @resurrect-capture-pane-contents "on"
-set -g @continumm-restore "on"
+set -g @resurrect-processes "yazi y cat bat"
+set -g @continuum-save-interval "10"
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-# Configure sesh
 bind-key "o" run-shell "sesh connect \"$(
- sesh list | fzf-tmux -p 55%,60% \
-  --no-sort --ansi --border-label ' sesh ' --prompt '  ' \
-  --bind 'tab:down,btab:up' \
-  --bind 'ctrl-a:change-prompt(⚡)+reload(sesh list)' \
-  --bind 'ctrl-t:change-prompt(🪟)+reload(sesh list -t)' \
-  --bind 'ctrl-g:change-prompt(⚙️)+reload(sesh list -c)' \
-  --bind 'ctrl-x:change-prompt(📁)+reload(sesh list -z)' \
-  --bind 'ctrl-f:change-prompt(🔎)+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-  --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡)+reload(sesh list)'
+  sesh list --icons | fzf-tmux -p 55%,60% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
 )\""
+
 
 bind-key x kill-pane
 
