--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -29,6 +29,11 @@ path = "~/Documents/notes"
 startup_command = "nvim Random/test.md --cmd 'autocmd VimEnter * ObsidianCreate'"
 
 [[session]]
+name = "Personal Website"
+path = "~/Documents/menai.me"
+startup_command = "bash ~/.config/sesh/scripts/website.sh"
+
+[[session]]
 name = "School"
 path = "~/Documents/school"
 startup_command = "bash ~/.config/sesh/scripts/school.sh"
