--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # Options to make tmux more pleasant
 set -g default-terminal "tmux-256color"
+set-option -a terminal-features "xterm-256color:RGB"
 set -g detach-on-destroy off
 set -g mouse off
 
@@ -11,6 +12,7 @@ set -ga update-environment TERM_PROGRAM
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+set-option -g renumber-windows on
 
 # Set prefix
 unbind C-b
