--- a/.config/git/config
+++ b/.config/git/config
@@ -11,3 +11,9 @@ rebase = true
 [core]
 editor = nvim
 autocrlf = input
+[credential "https://github.com"]
+	helper = 
+	helper = !/etc/profiles/per-user/rami/bin/gh auth git-credential
+[credential "https://gist.github.com"]
+	helper = 
+	helper = !/etc/profiles/per-user/rami/bin/gh auth git-credential
