--- a/hypr/bind.conf
+++ b/hypr/bind.conf
@@ -8,9 +8,10 @@ bind = $mainMod, Q, killactive,
 bind = ALT, F4, killactive,
 bind = $mainMod, F11, fullscreen 
 bind = $mainMod, E, exec, nemo
-bind = $mainMod, F, exec, firefox
-bind = $mainMod_SHIFT, F, exec, firefox --private-window
-bind = $mainMod, T, exec, telegram-desktop
+bind = $mainMod, Z, exec, zen 
+bind = $mainMod_SHIFT, Z, exec, zen --private-window
+bind = $mainMod, T, exec, wezterm
+bind = $mainMod, O, exec, obsidian
 bind = $mainMod, C, exec, code
 bind = $mainMod, O, exec, obs
 # bind = $mainMod, L, exec, swaylock
@@ -27,7 +28,7 @@ bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, X, exec, ~/.config/rofi/powermenu/type-2/powermenu.sh
 # bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, R, exec, ~/.config/rofi/run/run.sh
-bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
+# bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
 bind = $mainMod, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 bind = $mainMod_SHIFT, V, exec, ~/.config/rofi/snippet/snippet.sh
 bind = $mainMod_SHIFT, SPACE, exec, ~/.config/rofi/emoji/emoji.sh
