Change scroll speed

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -47,6 +47,7 @@ input {
         disable_while_typing = true
         natural_scroll = true
         disable_while_typing = true
+        scroll_factor = 0.2
 
     }
 
