Fix weird cursor

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,6 +54,11 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+cursor {
+    # Fixes nvidia issues
+    no_hardware_cursors = true
+}
+
 misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
