Switch to brave

--- a/hypr/bind.conf
+++ b/hypr/bind.conf
@@ -8,8 +8,8 @@ bind = $mainMod, Q, killactive,
 bind = ALT, F4, killactive,
 bind = $mainMod, F11, fullscreen 
 bind = $mainMod, E, exec, nemo
-bind = $mainMod, Z, exec, zen 
-bind = $mainMod_SHIFT, Z, exec, zen --private-window
+bind = $mainMod, Z, exec, brave
+bind = $mainMod_SHIFT, Z, exec, brave --private-window
 bind = $mainMod, T, exec, wezterm
 bind = $mainMod, O, exec, obsidian
 bind = $mainMod, C, exec, code
