--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,8 +40,9 @@ set -g @tmux-nvim-navigation-cycle false
 set -g @tmux-nvim-resize-step-x 2
 set -g @tmux-nvim-resize-step-y 2
 
+set -g @resurrect-dir "~/.local/share/tmux/resurrect"
 set -g @resurrect-capture-pane-contents "on"
-set -g @resurrect-processes "yazi y cat bat"
+set -g @resurrect-processes 'yazi y cat bat "~nvim->nvim *"'
 set -g @continuum-save-interval "10"
 
 set-window-option -g mode-keys vi
