Fix sound and brightness

--- a/hypr/bind.conf
+++ b/hypr/bind.conf
@@ -90,8 +90,8 @@ bind = $mainMod SHIFT, up, resizeactive, 0 -10
 bind = $mainMod SHIFT, down, resizeactive, 0 10
 
 # brightness control
-bind=,XF86MonBrightnessDown,exec,brillo -q -U 5 && dunstify -h int:value:"$(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))"  -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))%"
-bind=,XF86MonBrightnessUp,exec,brillo -q -A 5 && dunstify -h int:value:"$(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))"  -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $(( ($(cat /sys/class/backlight/*/brightness) * 100) / $(cat /sys/class/backlight/*/max_brightness) ))%"
+bind=,XF86MonBrightnessDown,exec,brightnessctl set 5%- && percentage=$(brightnessctl -m | cut -d, -f4 | sed 's/%//') && dunstify -h int:value:"$percentage" -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $percentage%"
+bind=,XF86MonBrightnessUp,exec,brightnessctl set +5% && percentage=$(brightnessctl -m | cut -d, -f4 | sed 's/%//') && dunstify -h int:value:"$percentage" -i ~/.config/dunst/assets/brightness.svg -t 500 -r 2593 "Brightness: $percentage%"
 
 # audio/sound control
 bind = , xf86audioraisevolume, exec, pamixer -i 5 && dunstify -h int:value:"$(pamixer --get-volume)" -i ~/.config/dunst/assets/volume.svg -t 500 -r 2593 "Volume: $(pamixer --get-volume) %" 
