--- a/hypr/bind.conf
+++ b/hypr/bind.conf
@@ -9,6 +9,7 @@ bind = ALT, F4, killactive,
 bind = $mainMod, F11, fullscreen 
 bind = $mainMod, E, exec, nemo
 bind = $mainMod, Z, exec, brave
+bind = $mainMod, D, exec, discord
 bind = $mainMod_SHIFT, Z, exec, brave --private-window
 bind = $mainMod, T, exec, wezterm
 bind = $mainMod, O, exec, obsidian
