Reorganize hypr config

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,7 +1,6 @@
-# BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/walls/1.png
+    path = ~/.config/hypr/wallpapers/lock.png
     # blur_passes = 0
     # contrast = 1
     # brightness = 1
@@ -9,17 +8,7 @@ background {
     # vibrancy_darkness = 0.2
 }
 
-# GENERAL
-general {
-    no_fade_in = false
-    no_fade_out = false
-    hide_cursor = true
-    grace = 0
-    disable_loading_bar = true
-    ignore_empty_input = true
-}
 
-# INPUT FIELD
 input-field {
     monitor =
     size = 250, 60
@@ -44,26 +33,24 @@ input-field {
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
 }
 
-# DATE
 label {
-  monitor =
-  text = cmd[update:1000] date +"%A, %B %d"
-  color = rgb(205, 214, 244)
-  font_size = 22
-  font_family = JetBrains Mono
-  position = 0, 300
-  halign = center
-  valign = center
+    monitor =
+    text = cmd[update:1000] date +"%A, %B %d"
+    color = rgb(205, 214, 244)
+    font_size = 22
+    font_family = JetBrains Mono
+    position = 0, 300
+    halign = center
+    valign = center
 }
 
-# TIME
 label {
-  monitor = 
-  text = cmd[update:1000]  date +"%-I:%M"
-  color = rgb(205, 214, 244)
-  font_size = 95
-  font_family = JetBrains Mono Extrabold
-  position = 0, 200
-  halign = center
-  valign = center
+    monitor = 
+    text = cmd[update:1000]  date +"%-I:%M"
+    color = rgb(205, 214, 244)
+    font_size = 95
+    font_family = JetBrains Mono Extrabold
+    position = 0, 200
+    halign = center
+    valign = center
 }
