--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/.config/hypr/walls/2.png
-wallpaper = eDP-1,~/.config/hypr/walls/2.png
+preload = ~/.config/hypr/wallpapers/back.png
+wallpaper = eDP-1,~/.config/hypr/wallpapers/back.png
 splash = false
