--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,34 +1,31 @@
 general {
-    lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
-    before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
+    lock_cmd = pidof hyprlock || hyprlock # avoid starting multiple hyprlock instances.
+    unlock_cmd = notify-send "unlock!"
+    before_sleep_cmd = loginctl lock-session # lock before suspend.
+    after_sleep_cmd = hyprctl dispatch dpms on # to avoid having to press a key twice to turn on the display.
+    ignore_dbus_inhibit = false
+    ignore_systemd_inhibit = false
 }
 
 listener {
-    timeout = 150                                # 2.5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+    timeout = 150
+    on-timeout = brightnessctl -s set 10
+    on-resume = brightnessctl -r
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
-# listener { 
-#     timeout = 150                                          # 2.5min.
-#     on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
-#     on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
-# }
-
-listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+listener { 
+    timeout = 150
+    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0
+    on-resume = brightnessctl -rd rgb:kbd_backlight
 }
 
 listener {
-    timeout = 330                                 # 5.5min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+    timeout = 600
+    on-timeout = loginctl lock-session
 }
 
-# listener {
-#     timeout = 3600                                # 60min
-#     on-timeout = systemctl suspend                # suspend pc
-# }
+listener {
+    timeout = 630
+    on-timeout = hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on
+}
