--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -78,3 +78,10 @@ color14 #94e2d5
 # white
 color7  #bac2de
 color15 #a6adc8
+
+map ctrl+equal change_font_size all +2.0
+map ctrl+minus change_font_size all -2.0
+map ctrl+0 change_font_size all 0
+
+font_family family="JetBrainsMonoNL Nerd Font Mono"
+font_size 12.0
