--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,9 @@ set-option -a terminal-features "xterm-256color:RGB"
 set -g detach-on-destroy off
 set -g mouse off
 
+# Fixes weirdness
+set -g default-command $SHELL
+
 # Fix yazi image preview
 set -g allow-passthrough all
 set -ga update-environment TERM
