--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -79,6 +79,8 @@ color14 #94e2d5
 color7  #bac2de
 color15 #a6adc8
 
+background_opacity 0.9
+
 map ctrl+equal change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
 map ctrl+0 change_font_size all 0
