--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -79,7 +79,11 @@ color14 #94e2d5
 color7  #bac2de
 color15 #a6adc8
 
-background_opacity 0.9
+# Improve performence
+input_delay 0
+repaint_delay 2
+sync_to_monitor no
+wayland_enable_ime no
 
 map ctrl+equal change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
