--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -85,6 +85,8 @@ repaint_delay 2
 sync_to_monitor no
 wayland_enable_ime no
 
+background_opacity 0.9
+
 map ctrl+equal change_font_size all +2.0
 map ctrl+minus change_font_size all -2.0
 map ctrl+0 change_font_size all 0
