Enhance vm experience

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,9 +24,11 @@ bind-key C-Space send-prefix
 
 # Rebind splits
 unbind s
+
 bind a choose-session
-bind s split-window -v -c "#{pane_current_path}"
-bind v split-window -h -c "#{pane_current_path}"
+bind c new-window -c '#{pane_current_path}'
+bind s split-window -v -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
  
 # Install plugins
 set -g @plugin "tmux-plugins/tpm"
@@ -36,6 +38,7 @@ set -g @plugin "tmux-plugins/tmux-continuum"
 set -g @plugin "aserowy/tmux.nvim"
 set -g @plugin "tmux-plugins/tmux-open"
 set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "pschmitt/tmux-ssh-split"
 set -g @plugin "dreamsofcode-io/catppuccin-tmux"
 
 # Configure plugins
@@ -47,6 +50,13 @@ set -g @resurrect-dir "~/.local/share/tmux/resurrect"
 set -g @resurrect-capture-pane-contents "on"
 set -g @resurrect-processes 'yazi y cat bat "~nvim->nvim *"'
 set -g @continuum-save-interval "10"
+
+set -g @ssh-split-keep-cwd true
+
+set -g @ssh-split-h-key v
+set -g @ssh-split-v-key s
+set -g @ssh-split-w-key c
+set -g @ssh-split-r-key r
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
