Finilize wezterm mappings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,30 +33,24 @@ bind v split-window -h -c '#{pane_current_path}'
 # Install plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "tmux-plugins/tmux-resurrect"
-set -g @plugin "tmux-plugins/tmux-continuum"
-set -g @plugin "aserowy/tmux.nvim"
 set -g @plugin "tmux-plugins/tmux-open"
 set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "pschmitt/tmux-ssh-split"
 set -g @plugin "dreamsofcode-io/catppuccin-tmux"
+set -g @plugin "mrjones2014/smart-splits.nvim"
 
-# Configure plugins
-set -g @tmux-nvim-navigation-cycle false
-set -g @tmux-nvim-resize-step-x 2
-set -g @tmux-nvim-resize-step-y 2
+set -g @smart-splits_no_wrap ""
 
-set -g @resurrect-dir "~/.local/share/tmux/resurrect"
-set -g @resurrect-capture-pane-contents "on"
-set -g @resurrect-processes 'yazi y cat bat "~nvim->nvim *"'
-set -g @continuum-save-interval "10"
+set -g @smart-splits_move_left_key  "C-h"
+set -g @smart-splits_move_down_key  "C-j"
+set -g @smart-splits_move_up_key    "C-k"
+set -g @smart-splits_move_right_key "C-l"
 
-set -g @ssh-split-keep-cwd true
+set -g @smart-splits_resize_left_key  "M-h"
+set -g @smart-splits_resize_down_key  "M-j"
+set -g @smart-splits_resize_up_key    "M-k"
+set -g @smart-splits_resize_right_key "M-l"
 
-set -g @ssh-split-h-key v
-set -g @ssh-split-v-key s
-set -g @ssh-split-w-key c
-set -g @ssh-split-r-key r
+set -g @smart-splits_resize_step_size "2"
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
