--- a/hypr/conf/layouts.conf
+++ b/hypr/conf/layouts.conf
@@ -1,6 +1,6 @@
 dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = true # master switch for pseudotiling. Enabling is boun>
+    pseudotile = true # master switch for pseudotiling. Enabling is bound
     preserve_split = true # you probably want this
 }
 
