--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -79,7 +79,7 @@ color14 #94e2d5
 color7  #bac2de
 color15 #a6adc8
 
-# Improve performence
+# Improve performance
 input_delay 0
 repaint_delay 2
 sync_to_monitor no
