feat: add Steam, Audacity, mime, and VM improvements

--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -1,4 +1,7 @@
-# # Window rules
+# Window rules
+windowrulev2 = stayfocused, title:^()$,class:^(steam)$
+windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
+windowrulev2 = fullscreen, class:Waydroid
 #   windowrule = float, file_progress
 #   windowrule = float, confirm
 #   windowrule = float, dialog
@@ -10,7 +13,7 @@
 #   windowrule = float, title:Open File
 #   windowrule = float, title:branchdialog
 #   windowrule = float, zoom
-# #   windowrule = fullscreen, vlc
+  # windowrule = fullscreen, vlc
 #   windowrule = float, Lxappearance
 #   windowrule = float, ncmpcpp
 #   windowrule = float, Rofi
