feat(config): update hyprland, dunst, and rofi configs

--- a/hypr/conf/monitor.conf
+++ b/hypr/conf/monitor.conf
@@ -1,2 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=eDP-1, highres@highrr, 0x0, 1.6
+# opengl {
+#     nvidia_anti_flicker = false
+# }
+
+monitor=eDP-1,highres@highrr, 0x0, 1.6
+monitor=HDMI-A-1,2560x1440@59.95Hz,auto,1
