--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -2,57 +2,67 @@
 windowrulev2 = stayfocused, title:^()$,class:^(steam)$
 windowrulev2 = minsize 1 1, title:^()$,class:^(steam)$
 windowrulev2 = fullscreen, class:Waydroid
-#   windowrule = float, file_progress
-#   windowrule = float, confirm
-#   windowrule = float, dialog
-#   windowrule = float, download
-#   windowrule = float, notification
-#   windowrule = float, error
-#   windowrule = float, splash
-#   windowrule = float, confirmreset
-#   windowrule = float, title:Open File
-#   windowrule = float, title:branchdialog
-#   windowrule = float, zoom
-  # windowrule = fullscreen, vlc
-#   windowrule = float, Lxappearance
-#   windowrule = float, ncmpcpp
-#   windowrule = float, Rofi
-#   windowrule = animation none, Rofi
-#   windowrule = float, viewnior
-#   windowrule = float, pavucontrol-qt
-#   windowrule = float, gucharmap
-#   windowrule = float, gnome-font
-#   windowrule = float, org.gnome.Settings
-#   windowrule = float, file-roller
-#   windowrule = float, nautilus
-#   windowrule = float, nemo
-#   windowrule = float, thunar
-#   windowrule = float, Pcmanfm
-# #   windowrule = float, obs
-#   windowrule = float, wdisplays
-#   windowrule = float, zathura
-#   windowrule = float, *.exe
-#   windowrule = fullscreen, wlogout
-#   windowrule = float, title:wlogout
-#   windowrule = fullscreen, title:wlogout
-#   windowrule = float, pavucontrol-qt
-#   windowrule = float, keepassxc
-#   windowrule = idleinhibit focus, mpv
-#   windowrule = idleinhibit fullscreen, firefox
-#   windowrule = float, title:^(Media viewer)$
-#   windowrule = float, title:^(Transmission)$
-#   windowrule = float, title:^(Volume Control)$
-#   windowrule = float, title:^(Picture-in-Picture)$
-#   windowrule = float, title:^(Firefox — Sharing Indicator)$
-#   windowrule = move 0 0, title:^(Firefox — Sharing Indicator)$
-#   windowrule = size 800 600, title:^(Volume Control)$
-#   windowrule = move 75 44%, title:^(Volume Control)$
-# # windowrulev2 = opacity 0.85 0.85,class:^(Alacritty|code-oss)$
-# # https://github.com/hyprwm/Hyprland/issues/2412
-#   windowrulev2=nofocus,class:^jetbrains-(?!toolbox),floating:1,title:^win\d+$
+windowrulev2 = monitor HDMI-A-1,title:^(Portal)$
+windowrulev2 = fullscreen, title:^Godot.*$
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float, class:floating
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# noanim isn't necessary but animations with these rules might look bad. use at your own discretion.
+windowrule = noanim, class:^(flameshot)$
+windowrule = float, class:^(flameshot)$
+windowrule = move 0 0, class:^(flameshot)$
+windowrule = pin, class:^(flameshot)$
+windowrule = monitor 1, class:^(flameshot)$
+windowrule = float, class:^(file_progress)$
+windowrule = float, class:^(confirm)$
+windowrule = float, class:^(dialog)$
+windowrule = float, class:^(download)$
+windowrule = float, class:^(notification)$
+windowrule = float, class:^(error)$
+windowrule = float, class:^(splash)$
+windowrule = float, class:^(confirmreset)$
+windowrule = float, title:Open File
+windowrule = float, title:branchdialog
+windowrule = float, class:^(zoom)$
+windowrule = fullscreen, class:^(vlc)$
+windowrule = float, class:^(Lxappearance)$
+windowrule = float, class:^(ncmpcpp)$
+windowrule = float, class:^(Rofi)$
+windowrule = animation none, class:^(Rofi)$
+windowrule = float, class:^(viewnior)$
+windowrule = float, class:^(pavucontrol-qt)$
+windowrule = float, class:^(gucharmap)$
+windowrule = float, class:^(gnome-font-viewer)$
+windowrule = float, class:^(org.gnome.Settings)$
+windowrule = float, class:^(file-roller)$
+windowrule = float, class:^(nautilus)$
+windowrule = float, class:^(nemo)$
+windowrule = float, class:^(thunar)$
+windowrule = float, class:^(Pcmanfm)$
+windowrule = float, class:^(obs)$
+windowrule = float, class:^(wdisplays)$
+windowrule = float, class:^(zathura)$
+windowrule = float, class:^(.*\.exe)$
+windowrule = fullscreen, class:^(wlogout)$
+windowrule = float, title:^(wlogout)$
+windowrule = fullscreen, title:^(wlogout)$
+windowrule = float, class:^(pavucontrol-qt)$
+windowrule = float, class:^(keepassxc)$
+windowrule = idleinhibit focus, class:^(mpv)$
+windowrule = idleinhibit fullscreen, class:^(firefox)$
+windowrule = float, title:^(Media viewer)$
+windowrule = float, title:^(Transmission)$
+windowrule = float, title:^(Volume Control)$
+windowrule = float, title:^(Picture-in-Picture)$
+windowrule = float, title:^(Firefox — Sharing Indicator)$
+windowrule = move 0 0, title:^(Firefox — Sharing Indicator)$
+windowrule = size 800 600, title:^(Volume Control)$
+windowrule = move 75 44%, title:^(Volume Control)$
+windowrulev2 = opacity 0.85 0.85,class:^(Alacritty|code-oss)$
+# https://github.com/hyprwm/Hyprland/issues/2412
+windowrulev2=nofocus,class:^jetbrains-(?!toolbox),floating:1,title:^win\d+$
+
+windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrule = noanim, class:^(xwaylandvideobridge)$
+windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule = nofocus, class:^(xwaylandvideobridge)$
