--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -7,4 +7,5 @@ exec-once = easyeffects --gapplication-service
 exec-once = hypridle
 exec-once = sh ~/.config/hypr/scripts/nogaps.sh
 exec-once = wezterm
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 # exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'sleep' before-sleep 'swaylock -f'
