--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -7,46 +7,44 @@ bind = CTRL_ALT, T, exec, alacritty --class floating
 bind = $mainMod, Q, killactive,
 bind = ALT, F4, killactive,
 bind = $mainMod, F11, fullscreen
-bind = $mainMod, E, exec, nemo
-bind = $mainMod, Z, exec, brave
+bind = $mainMod, E, exec, wezterm -e yazi
+bind = $mainMod, P, exec, brave
 bind = $mainMod, D, exec, discord
 bind = $mainMod_SHIFT, Z, exec, brave --private-window
 bind = $mainMod, T, exec, wezterm
-bind = $mainMod, O, exec, obsidian
+bind = $mainMod, N, exec, obsidian
 bind = $mainMod, C, exec, code
 bind = $mainMod, O, exec, obs
-# bind = $mainMod, L, exec, swaylock
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, S, togglefloating,
 bind = $mainMod SHIFT, R, exec, /home/sam/.config/hypr/scripts/reload.sh # reload hyprland
-bind = $mainMod, P, pseudo, # dwindle
+# bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-# bind = $mainMod, K, exec, killall waybar || waybar # hide or kill and display waybar
+bind = $mainMod, K, exec, pkill waybar || waybar # hide or kill and display waybar
 
 # rofi
-# bindr = $mainMod, Super_L, exec, ~/.config/rofi/launchers/type-2/launcher.sh  # launch the app list in rofi with super key only
 bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, X, exec, ~/.config/rofi/powermenu/type-2/powermenu.sh
-# bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, R, exec, ~/.config/rofi/run/run.sh
-# bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
+bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
 bind = $mainMod, V, exec, ~/.config/rofi/clipboard/clipboard.sh
-bind = $mainMod_SHIFT, V, exec, ~/.config/rofi/snippet/snippet.sh
+# bind = $mainMod_SHIFT, V, exec, ~/.config/rofi/snippet/snippet.sh
 bind = $mainMod_SHIFT, SPACE, exec, ~/.config/rofi/emoji/emoji.sh
 bind = $mainMod, W, exec, ~/.config/rofi/wifi/wifi.sh
 bind = $mainMod_SHIFT, W, exec, ~/.config/rofi/wifi/wifinew.sh
-# bind = $mainMod, B, exec, ~/.config/rofi/bluetooth/blt-connect.sh
+bind = $mainMod, B, exec, ~/.config/rofi/bluetooth/blt-connect.sh
 
 # Screenshot
-bind = SHIFT, Print, exec, FILE=~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png; grim -g "$(slurp)" - | tee >(wl-copy) | { cat > "$FILE" && [ -s "$FILE" ] && dunstify -i "$FILE" "Screenshot of the region taken" -t 1000 || rm -f "$FILE"; }
-bind = , Print, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify  -i ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png "Screenshot of whole screen taken" -t 1000 # screenshot of the whole screen
+bind = , Print, exec, FILE=~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png; grim -g "$(slurp)" - | tee >(wl-copy) | { cat > "$FILE" && [ -s "$FILE" ] && dunstify -i "$FILE" "Screenshot of the region taken" -t 1000 || rm -f "$FILE"; }
+bind = SHIFT, Print, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify  -i ~/Pictures/Screenshots/Screenshot-$(date +%F_%T).png "Screenshot of whole screen taken" -t 1000 # screenshot of the whole screen
+# bind = Print, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 
 # Poweroff, Logout, Reboot
 bind = $mainMod_SHIFT_ALT, P, exec, shutdown -h now
 bind = $mainMod_SHIFT_ALT, R, exec, reboot
 bind = $mainMod_SHIFT_ALT, L, exit,
-bind = $mainMod_SHIFT_ALT, S, exec, sleep 1 && hyprctl dispatch dpms off	# turn off screen
-bind = $mainMod_SHIFT, S, exec, sleep 1 && hyprctl dispatch dpms on		# turn on screen
+bind = $mainMod_SHIFT_ALT, S, exec, hyprctl dispatch dpms off	# turn off screen
+bind = $mainMod_SHIFT, S, exec, hyprctl dispatch dpms on		# turn on screen
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
