--- a/hypr/conf/general.conf
+++ b/hypr/conf/general.conf
@@ -3,7 +3,7 @@
 general {
     gaps_in = 5
     gaps_out = 10
-    border_size = 2
+    border_size = 1
     col.active_border = 0xffcba6f7
     col.inactive_border = 0xff313244
     no_border_on_floating = true
@@ -21,8 +21,8 @@ general {
     #col.inactive_border = rgba(44475aaa)
     #col.group_border = rgba(282a36dd)
     #col.group_border_active = rgb(bd93f9)
-    col.active_border = rgb(268bd2) # rgb(6272a4) # or rgb(44475a)
-    col.inactive_border = rgb(1a1a1a)
+    col.active_border = rgb(cba6f7)   # Catppuccin Mauve
+    col.inactive_border = rgb(313244) # Catppuccin Surface0
    # col.nogroup_border = rgb(282a36)
    # col.nogroup_border_active = rgb(6272a4) # or rgb(44475a)
 }
