--- a/hypr/conf/monitor.conf
+++ b/hypr/conf/monitor.conf
@@ -3,5 +3,11 @@
 #     nvidia_anti_flicker = false
 # }
 
-monitor=eDP-1,highres@highrr, 0x0, 1.6
+# monitor=eDP-1,highres@highrr, 0x0, 1.6
+monitor=eDP-1,1920x1200@120Hz, 0x0, 1
 monitor=HDMI-A-1,2560x1440@59.95Hz,auto,1
+
+# xwayland {
+#   force_zero_scaling = true
+# }
+#
