feat: new lockscreen

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -23,7 +23,7 @@ input-field {
     rounding = -1
     placeholder_text = <span foreground="##cdd6f4">Password</span>
     hide_input = false
-    position = 0, -200
+    position = 0, -300
     halign = center
     valign = center
     check_color = rgb(108, 112, 134)
@@ -33,24 +33,24 @@ input-field {
     fail_transition = 300 # transition time in ms between normal outer_color and fail_color
 }
 
-label {
-    monitor =
-    text = cmd[update:1000] date +"%A, %B %d"
-    color = rgb(205, 214, 244)
-    font_size = 22
-    font_family = JetBrains Mono
-    position = 0, 300
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1000]  date +"%-I:%M"
-    color = rgb(205, 214, 244)
-    font_size = 95
-    font_family = JetBrains Mono Extrabold
-    position = 0, 200
-    halign = center
-    valign = center
-}
+# label {
+#     monitor =
+#     text = cmd[update:1000] date +"%A, %B %d"
+#     color = rgb(205, 214, 244)
+#     font_size = 22
+#     font_family = JetBrains Mono
+#     position = -450, 100
+#     halign = center
+#     valign = center
+# }
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000]  date +"%-I:%M"
+#     color = rgb(205, 214, 244)
+#     font_size = 95
+#     font_family = JetBrains Mono Extrabold
+#     position = -450, 200
+#     halign = center
+#     valign = center
+# }
