--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -1,11 +1,12 @@
 # Execute your favorite apps at launch
+exec-once = hyprlock
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = wl-paste --watch cliphist store
 exec-once = dunst -conf .config/dunst/dunstrc
-exec-once = easyeffects --gapplication-service
 exec-once = hypridle
-# exec-once = sh ~/.config/hypr/scripts/nogaps.sh
-exec-once = wezterm
+exec-once = easyeffects --gapplication-service
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = wezterm
+# exec-once = sh ~/.config/hypr/scripts/nogaps.sh
 # exec-once = swayidle -w timeout 300 'swaylock -f' timeout 600 'sleep' before-sleep 'swaylock -f'
