--- a/hypr/conf/cursor.conf
+++ b/hypr/conf/cursor.conf
@@ -1,8 +1,8 @@
 env = XCURSOR_SIZE,2
 
-# cursor {
-#     # Fixes nvidia issues
-#     no_hardware_cursors = true
-# }
+cursor {
+    # Fixes nvidia issues
+    no_hardware_cursors = true
+}
 
 env = WLR_NO_HARDWARE_CURSORS,1
