fix: finally end the suspend hell

--- a/hypr/hypridle.bat.conf
+++ b/hypr/hypridle.bat.conf
@@ -35,5 +35,5 @@ listener {
 
 listener {
     timeout = 3600
-    on-timeout = systemctl suspend
+    on-timeout = systemctl suspend-then-hibernate
 }
