--- a/hypr/conf/general.conf
+++ b/hypr/conf/general.conf
@@ -1,5 +1,9 @@
 # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+ecosystem {
+    no_update_news = true
+}
+
 general {
     gaps_in = 0
     gaps_out = 0
