--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -8,9 +8,9 @@ bind = $mainMod, Q, killactive,
 bind = ALT, F4, killactive,
 bind = $mainMod, F11, fullscreen
 bind = $mainMod, E, exec, wezterm -e yazi
-bind = $mainMod, P, exec, brave
+bind = $mainMod, Z, exec, vivaldi
 bind = $mainMod, D, exec, discord
-bind = $mainMod_SHIFT, Z, exec, brave --private-window
+bind = $mainMod_SHIFT, Z, exec, vivaldi --private-window
 bind = $mainMod, T, exec, wezterm
 bind = $mainMod, N, exec, obsidian
 bind = $mainMod, C, exec, code
@@ -26,7 +26,7 @@ bind = $mainMod, K, exec, pkill waybar || waybar # hide or kill and display wayb
 bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, X, exec, ~/.config/rofi/powermenu/type-2/powermenu.sh
 bind = $mainMod, R, exec, ~/.config/rofi/run/run.sh
-bind = $mainMod, Z, exec, ~/.config/rofi/filebrowser/filebrowser.sh
+bind = $mainMod, P, exec, ~/.config/rofi/filebrowser/filebrowser.sh
 bind = $mainMod, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 # bind = $mainMod_SHIFT, V, exec, ~/.config/rofi/snippet/snippet.sh
 bind = $mainMod_SHIFT, SPACE, exec, ~/.config/rofi/emoji/emoji.sh
