feat(hypr): improve Bitwarden window rules for Vivaldi

--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -5,6 +5,11 @@ windowrulev2 = fullscreen, class:Waydroid
 windowrulev2 = monitor HDMI-A-1,title:^(Portal)$
 windowrulev2 = fullscreen, title:^Godot.*$
 
+# More flexible Bitwarden rule for Vivaldi
+windowrulev2 = float, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
+windowrulev2 = size 400 600, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
+windowrulev2 = center, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
+
 # noanim isn't necessary but animations with these rules might look bad. use at your own discretion.
 windowrule = noanim, class:^(flameshot)$
 windowrule = float, class:^(flameshot)$
