feat(hypr): improve popup rules for Vivaldi Google/Auth dialogs

--- a/hypr/conf/windowrules.conf
+++ b/hypr/conf/windowrules.conf
@@ -5,10 +5,15 @@ windowrulev2 = fullscreen, class:Waydroid
 windowrulev2 = monitor HDMI-A-1,title:^(Portal)$
 windowrulev2 = fullscreen, title:^Godot.*$
 
-# More flexible Bitwarden rule for Vivaldi
+# Bitwarden popup
 windowrulev2 = float, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
 windowrulev2 = size 400 600, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
 windowrulev2 = center, class:^(Vivaldi-stable)$, title:.*Bitwarden.*
+
+# Google login/auth popups (improved patterns)
+windowrulev2 = float, class:^(Vivaldi-stable)$, title:.*(Google|Login|Connexion|Sign|Auth|OAuth).*
+windowrulev2 = size 800 600, class:^(Vivaldi-stable)$, title:.*(Google|Login|Connexion|Sign|Auth|OAuth).*
+windowrulev2 = center, class:^(Vivaldi-stable)$, title:.*(Google|Login|Connexion|Sign|Auth|OAuth).*
 
 # noanim isn't necessary but animations with these rules might look bad. use at your own discretion.
 windowrule = noanim, class:^(flameshot)$
