feat: update lock, blender, and rofi configs

--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -15,9 +15,9 @@ bind = $mainMod, T, exec, wezterm
 bind = $mainMod, N, exec, obsidian
 bind = $mainMod, C, exec, code
 bind = $mainMod, O, exec, obs
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, swaylock
 bind = $mainMod, S, togglefloating,
-bind = $mainMod SHIFT, R, exec, /home/sam/.config/hypr/scripts/reload.sh # reload hyprland
+bind = $mainMod SHIFT, R, exec, ~/.config/hypr/scripts/reload.sh # reload hyprland
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, exec, pkill waybar || waybar # hide or kill and display waybar
