feat(hypr): update power binds and add lock.xcf source

--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -40,8 +40,8 @@ bind = SHIFT, Print, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshots
 # bind = Print, exec, XDG_CURRENT_DESKTOP=sway flameshot gui
 
 # Poweroff, Logout, Reboot
-bind = $mainMod_SHIFT_ALT, P, exec, shutdown -h now
-bind = $mainMod_SHIFT_ALT, R, exec, reboot
+bind = $mainMod_SHIFT_ALT, P, exec, systemctl poweroff
+bind = $mainMod_SHIFT_ALT, R, exec, systemctl reboot
 bind = $mainMod_SHIFT_ALT, L, exit,
 bind = $mainMod_SHIFT_ALT, S, exec, hyprctl dispatch dpms off	# turn off screen
 bind = $mainMod_SHIFT, S, exec, hyprctl dispatch dpms on		# turn on screen
