feat(mpd): add MPD audio service and ncmpcpp support

--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -12,6 +12,7 @@ bind = $mainMod, Z, exec, vivaldi
 bind = $mainMod, D, exec, discord
 bind = $mainMod_SHIFT, Z, exec, vivaldi --private-window
 bind = $mainMod, T, exec, wezterm
+bind = $mainMod, A, exec, anki
 bind = $mainMod, N, exec, obsidian
 bind = $mainMod, C, exec, code
 bind = $mainMod, O, exec, obs
