--- a/hypr/conf/autostart.conf
+++ b/hypr/conf/autostart.conf
@@ -1,9 +1,11 @@
 # Execute your favorite apps at launch
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = fcitx5 -d
 exec-once = wl-paste --watch cliphist store
 exec-once = dunst -conf .config/dunst/dunstrc
 exec-once = hypridle
+exec-once = hyprsunset
 exec-once = easyeffects --gapplication-service
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = wezterm
