--- a/hypr/conf/binds.conf
+++ b/hypr/conf/binds.conf
@@ -22,15 +22,16 @@ bind = $mainMod SHIFT, R, exec, ~/.config/hypr/scripts/reload.sh # reload hyprla
 # bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, K, exec, pkill waybar || waybar # hide or kill and display waybar
+bind = $mainMod, I, exec, killall hyprsunset; hyprsunset
 
 # rofi
-bind = $mainMod, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
+bind = ALT, SPACE, exec, ~/.config/rofi/launchers/launcher.sh
 bind = $mainMod, X, exec, ~/.config/rofi/powermenu/type-2/powermenu.sh
 bind = $mainMod, R, exec, ~/.config/rofi/run/run.sh
 bind = $mainMod, P, exec, ~/.config/rofi/filebrowser/filebrowser.sh
 bind = $mainMod, V, exec, ~/.config/rofi/clipboard/clipboard.sh
 # bind = $mainMod_SHIFT, V, exec, ~/.config/rofi/snippet/snippet.sh
-bind = $mainMod_SHIFT, SPACE, exec, ~/.config/rofi/emoji/emoji.sh
+bind = ALT_SHIFT, SPACE, exec, ~/.config/rofi/emoji/emoji.sh
 bind = $mainMod, W, exec, ~/.config/rofi/wifi/wifi.sh
 bind = $mainMod_SHIFT, W, exec, ~/.config/rofi/wifi/wifinew.sh
 bind = $mainMod, B, exec, ~/.config/rofi/bluetooth/blt-connect.sh
