--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -1,11 +1,46 @@
 {
+	/*
 	"include": [
 		"~/.config/waybar/modules/*.jsonc",
 		"~/.config/waybar/modules/custom/*.jsonc",
-		"~/.config/waybar/modules/hyprland/*.jsonc"
+		"~/.config/waybar/modules/niri/*.jsonc"
 
 		// modules that are not included by default:
 		// "~/.config/waybar/modules/extras/*.jsonc"
+	],
+	*/
+
+	"include": [
+		// modules-left
+		"~/.config/waybar/modules/custom/user.jsonc",
+		"~/.config/waybar/modules/niri/workspaces.jsonc",
+		"~/.config/waybar/modules/niri/window.jsonc",
+
+		// modules-center
+		"~/.config/waybar/modules/niri/windowcount.jsonc",
+		"~/.config/waybar/modules/temperature.jsonc",
+		"~/.config/waybar/modules/memory.jsonc",
+		"~/.config/waybar/modules/cpu.jsonc",
+		"~/.config/waybar/modules/custom/distro.jsonc",
+		"~/.config/waybar/modules/idle_inhibitor.jsonc",
+		"~/.config/waybar/modules/clock.jsonc",
+		"~/.config/waybar/modules/network.jsonc",
+		"~/.config/waybar/modules/bluetooth.jsonc",
+		"~/.config/waybar/modules/custom/system_update.jsonc",
+
+		// modules-right
+		"~/.config/waybar/modules/mpris.jsonc",
+		"~/.config/waybar/modules/pulseaudio.jsonc",
+		"~/.config/waybar/modules/backlight.jsonc",
+		"~/.config/waybar/modules/battery.jsonc",
+		"~/.config/waybar/modules/custom/power_menu.jsonc",
+
+		"~/.config/waybar/modules/custom/dividers.jsonc"
+
+		// modules that are not included by default:
+		// "~/.config/waybar/modules/extras/taskbar.jsonc",
+		// "~/.config/waybar/modules/extras/tray.jsonc",
+		// "~/.config/waybar/modules/extras/wireplumber.jsonc"
 	],
 
 	/*------------
@@ -15,12 +50,12 @@
 	"modules-left": [
 		"group/user",
 		"custom/left_div#1",
-		"hyprland/workspaces",
+		"niri/workspaces",
 		"custom/right_div#1",
-		"hyprland/window"
+		"niri/window"
 	],
 	"modules-center": [
-		"hyprland/windowcount",
+		"niri/windowcount",
 		"custom/left_div#2",
 		"temperature",
 		"custom/left_div#3",
