feat: use dmenu for waybar actions

--- a/modules/home/desktop/void/mechabar/modules/custom/power_menu.jsonc
+++ b/modules/home/desktop/void/mechabar/modules/custom/power_menu.jsonc
@@ -15,7 +15,7 @@
 		// "max-length":
 		// "align":
 		// "justify":
-		"on-click": "kitty -e ~/.config/waybar/scripts/power-menu.sh",
+		"on-click": "rofi -show power-menu -modi power-menu:rofi-power-menu",
 		// "on-click-middle":
 		// "on-click-right":
 		// "on-update":
